[gd_scene load_steps=19 format=3 uid="uid://7lv5hpljiw2t"]

[ext_resource type="Theme" uid="uid://dn4qjlxmfs7jc" path="res://addons/res_port/resources/res_port_theme.tres" id="1_o0h03"]
[ext_resource type="Script" uid="uid://bbx72qeen83ft" path="res://addons/res_port/dock.gd" id="2_wwn7t"]
[ext_resource type="FontFile" uid="uid://dcio736pi1u1" path="res://addons/res_port/resources/ORBITRON-BLACK.TTF" id="3_wwn7t"]
[ext_resource type="FontFile" uid="uid://btckuh646lhe8" path="res://addons/res_port/resources/ORBITRON-MEDIUM.TTF" id="4_mc2nk"]

[sub_resource type="Gradient" id="Gradient_b5xod"]
colors = PackedColorArray(0, 0, 0, 1, 1.5883148e-06, 0, 0.5650341, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_rvbr4"]
gradient = SubResource("Gradient_b5xod")
fill_from = Vector2(0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_02ydt"]
font = ExtResource("3_wwn7t")
font_size = 20
font_color = Color(0.757073, 0.7779179, 0.94491255, 1)
shadow_size = 8
shadow_color = Color(0, 0.15294118, 0.80784315, 1)
shadow_offset = Vector2(0, 2)

[sub_resource type="LabelSettings" id="LabelSettings_ydh0h"]
font = ExtResource("4_mc2nk")
font_size = 10
font_color = Color(0.5974274, 0.62067264, 0.89691293, 1)
outline_color = Color(0, 0.33756217, 0.33756217, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rvbr4"]
bg_color = Color(0, 0.15351224, 0.80898523, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.8, 0.8, 1, 1)
border_blend = true
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u0mp4"]
content_margin_left = 6.0
content_margin_top = 16.0
content_margin_right = 6.0
content_margin_bottom = 6.0

[sub_resource type="LabelSettings" id="LabelSettings_b5xod"]
font_size = 12
font_color = Color(1, 1, 1, 0.78431374)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wwn7t"]
bg_color = Color(0.11, 0.11, 0.11, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.5, 0.5, 0.5, 1)
border_blend = true
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mc2nk"]
content_margin_left = 6.0
content_margin_top = 6.0
content_margin_right = 6.0
content_margin_bottom = 6.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2aoae"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ydh0h"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wwn7t"]
content_margin_left = 6.0
content_margin_top = 6.0
content_margin_right = 6.0
content_margin_bottom = 6.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5yt58"]

[sub_resource type="LabelSettings" id="LabelSettings_j2xs6"]

[node name="ResPort" type="Control" node_paths=PackedStringArray("execute_button", "custom_resource_container")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_o0h03")
script = ExtResource("2_wwn7t")
execute_button = NodePath("TabContainer/Actions/ScrollContainer/VBoxContainer/Buttons/Execute")
custom_resource_container = NodePath("TabContainer/Settings/ScrollContainer/VBoxContainer/Panel/ScrollContainer/Scripts")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_rvbr4")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 1.0
offset_right = 109.0
offset_bottom = 44.0
text = "ResPort"
label_settings = SubResource("LabelSettings_02ydt")

[node name="Version" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -93.0
offset_top = 4.0
offset_right = -16.0
offset_bottom = 47.0
grow_horizontal = 0
text = "V 0.1"
label_settings = SubResource("LabelSettings_ydh0h")
horizontal_alignment = 2

[node name="Credit" type="Label" parent="."]
layout_mode = 0
offset_left = 116.0
offset_top = 4.0
offset_right = 189.0
offset_bottom = 47.0
text = "by Elixir99"
label_settings = SubResource("LabelSettings_ydh0h")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
tab_alignment = 2
current_tab = 0
clip_tabs = false

[node name="Actions" type="Panel" parent="TabContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rvbr4")
metadata/_tab_index = 0

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Actions"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_u0mp4")

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Actions/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 16

[node name="ResourceType" type="OptionButton" parent="TabContainer/Actions/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0.03137255, 0.78431374)
theme_override_font_sizes/font_size = 16

[node name="Label" type="Label" parent="TabContainer/Actions/ScrollContainer/VBoxContainer/ResourceType"]
layout_mode = 0
offset_top = -8.0
offset_right = 102.0
offset_bottom = 15.0
scale = Vector2(1, 0.5)
text = "RESOURCE TYPE"
label_settings = SubResource("LabelSettings_b5xod")

[node name="ScriptName" type="LineEdit" parent="TabContainer/Actions/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "ItemExample"
placeholder_text = "Item"

[node name="Label" type="Label" parent="TabContainer/Actions/ScrollContainer/VBoxContainer/ScriptName"]
layout_mode = 0
offset_top = -8.0
offset_right = 102.0
offset_bottom = 15.0
scale = Vector2(1, 0.5)
text = "RESOURCE TYPE"
label_settings = SubResource("LabelSettings_b5xod")

[node name="RootDirectory" type="LineEdit" parent="TabContainer/Actions/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Entire Project"

[node name="Label" type="Label" parent="TabContainer/Actions/ScrollContainer/VBoxContainer/RootDirectory"]
layout_mode = 0
offset_top = -8.0
offset_right = 102.0
offset_bottom = 15.0
scale = Vector2(1, 0.5)
text = "ROOT DIRECTORY"
label_settings = SubResource("LabelSettings_b5xod")

[node name="CsvPath" type="LineEdit" parent="TabContainer/Actions/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "items.csv"

[node name="Label" type="Label" parent="TabContainer/Actions/ScrollContainer/VBoxContainer/CsvPath"]
layout_mode = 0
offset_top = -8.0
offset_right = 102.0
offset_bottom = 15.0
scale = Vector2(1, 0.5)
text = "CSV PATH"
label_settings = SubResource("LabelSettings_b5xod")

[node name="Buttons" type="GridContainer" parent="TabContainer/Actions/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 3

[node name="Mode" type="OptionButton" parent="TabContainer/Actions/ScrollContainer/VBoxContainer/Buttons"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Export"
popup/item_0/id = 1
popup/item_1/text = "Import"
popup/item_1/id = 0

[node name="Validate" type="Button" parent="TabContainer/Actions/ScrollContainer/VBoxContainer/Buttons"]
unique_name_in_owner = true
modulate = Color(1, 0.7137255, 0.57254905, 1)
layout_mode = 2
text = "Validate"

[node name="Execute" type="Button" parent="TabContainer/Actions/ScrollContainer/VBoxContainer/Buttons"]
modulate = Color(1, 0.45, 0.725, 1)
layout_mode = 2
disabled = true
text = "Execute"

[node name="Notice" type="RichTextLabel" parent="TabContainer/Actions/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 18)
layout_mode = 2
theme_override_colors/default_color = Color(1, 0.69803923, 0.5686275, 1)
theme_override_font_sizes/normal_font_size = 12
fit_content = true
scroll_active = false

[node name="Settings" type="Panel" parent="TabContainer"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wwn7t")
metadata/_tab_index = 1

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 11.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_mc2nk")

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Settings/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 16

[node name="Buttons" type="HBoxContainer" parent="TabContainer/Settings/ScrollContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="AddScript" type="Button" parent="TabContainer/Settings/ScrollContainer/VBoxContainer/Buttons"]
layout_mode = 2
text = "Add Resource"

[node name="ResourceNotice" type="RichTextLabel" parent="TabContainer/Settings/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 18)
layout_mode = 2
theme_override_colors/default_color = Color(1, 0.69803923, 0.5686275, 1)
theme_override_font_sizes/normal_font_size = 12
text = "This is a notice"
fit_content = true
scroll_active = false

[node name="Panel" type="Panel" parent="TabContainer/Settings/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_2aoae")

[node name="Label" type="Label" parent="TabContainer/Settings/ScrollContainer/VBoxContainer/Panel"]
layout_mode = 0
offset_top = -8.0
offset_right = 102.0
offset_bottom = 15.0
scale = Vector2(1, 0.5)
text = "RESOURCE TYPES"
label_settings = SubResource("LabelSettings_b5xod")

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Settings/ScrollContainer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_ydh0h")

[node name="Scripts" type="VBoxContainer" parent="TabContainer/Settings/ScrollContainer/VBoxContainer/Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Help" type="Panel" parent="TabContainer"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rvbr4")
metadata/_tab_index = 2

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Help"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_wwn7t")

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Help/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Notice" type="RichTextLabel" parent="TabContainer/Help/ScrollContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 18)
layout_mode = 2
theme_override_colors/default_color = Color(0.8, 0.81333333, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_5yt58")
bbcode_enabled = true
text = "[font_size=22][b]Overview[/b][/font_size]

This plugin allows you to import and export Godot [b]Resources[/b] to and from CSV files.   It was designed to speed up your ability to modify resources in bulk, via CSV. It works by calling a small, explicit interface on your Resource scripts. Once configured, the plugin will be able to export those custom Resources, re-import edited CSV data, and automatically create new Resource instances from CSV rows that do not yet exist.

For ResPort to operate correctly, two steps are required:
1. Implement the ResPort [b]interface[/b] in those scripts
2. Register custom Resource Types in the [b]Settings[/b] tab  
3. Import and export freely via the [b]Actions[/b] tab


[font_size=22][b]Step 1: Implement Interface[/b][/font_size]

For each custom Resource that you want ResPort to handle, the Resource [b]must[/b]:
â€¢ Include [i]@tool[/i] at the very top
â€¢ Extend [i]Resource[/i] (either directly or indirectly)  
â€¢ Include the following ResPort CSV interface methods:

[b]func to_csv_header() -> Array[String][/b]  
Defines the CSV column headers for this Resource.  
ResPort may inject additional headers before these fields.

[b]func to_csv_fields() -> Array[String][/b]  
Serializes the Resourceâ€™s data into CSV field values.  
The order must match [i]to_csv_header()[/i].

[b]func apply_csv_fields(values: Array[String])[/b]  
Applies CSV values back into the Resource.  
Indexes must match [i]to_csv_header()[/i].

[i]See res://addons/res_port/example/item_example.gd for an example of the interface implemented into a Resource script.[/i]


[font_size=22][b]Step 2: Configure Settings[/b][/font_size]

Before ResPort can operate on of your custom Resources, it must know which Resources to target. This is done by defining [b]Resource Types[/b] in the Settings tab. Simply select the custom Resource scripts that you wish to include. Selections persist between editor sessions and can be freely added, removed, or modified as your project evolves.

[i]Note that should the path change for any of your Resources scripts, they will need to be reconfigured in the settings tab.[/i]


[font_size=22][b]Step 3: Actions[/b][/font_size]

With ResPort now configured, you are free to import and export. Select from configured Resource Types, choose the existing or desired CSV path, and toggle export or import mode. 

To execute the action, [b]Validate[/b] must first be performed. If validation is successful, the [b]Execute[/b] button will become available. If not successful, a notice of steps to correct will be provided.

[i]It is possible to test actions using the example ItemExample Resource Type included with the plugin. The example folder is optional and may be safely removed at any time.[/i]


[font_size=22][b]Rules & Best Practices[/b][/font_size]

[b]@tool is required[/b]  
ResPort runs in the editor. Scripts without [i]@tool[/i] will not function.

[b]Resources only[/b]  
Target scripts must extend [i]Resource[/i], directly or indirectly.

[b]Inheritance is supported[/b]  
For inheritance chains (e.g. [i]Weapon â†’ Item â†’ Resource[/i]), override the interface methods, call [i]super()[/i] where appropriate, and append or handle additional fields explicitly.

[b]Order matters[/b]  
The order defined in [i]to_csv_header()[/i] controls CSV layout, value mapping, and import correctness. Headers and fields must remain aligned.

[b]CSV Import Behavior[/b]
When importing, existing Resources are updated via [i]apply_csv_fields()[/i], rows referencing non-existent Resources automatically create new instances, and newly created Resources are saved to disk and populated through your interface.


[b]Thank you for using ResPort![/b]
Happy exporting ðŸš€
"
fit_content = true
scroll_active = false

[node name="ClickBlock" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.39215687)

[node name="Label" type="Label" parent="ClickBlock"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "PROMPTING FILEPATH"
label_settings = SubResource("LabelSettings_j2xs6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CsvDialog" type="FileDialog" parent="."]
oversampling_override = 1.0
title = "Set Export Path"
initial_position = 4
max_size = Vector2i(1000, 1000)
ok_button_text = "Confirm"
display_mode = 1
access = 2
filters = PackedStringArray("*.csv")
hidden_files_toggle_enabled = false

[node name="ScriptDialog" type="FileDialog" parent="."]
oversampling_override = 1.0
title = "Open a File"
initial_position = 4
max_size = Vector2i(1000, 1000)
ok_button_text = "Select"
file_mode = 0
display_mode = 1
filters = PackedStringArray("*.gd")
hidden_files_toggle_enabled = false

[node name="WithinProjectConfirm" type="ConfirmationDialog" parent="."]
oversampling_override = 1.0
title = "Wait a sec!"
initial_position = 4
size = Vector2i(300, 186)
ok_button_text = "OK"
dialog_text = "It is recommended that CSV files be saved outside your Godot project! Godot treats CSV files as translation files natively. If you still wish to export to a path within the project, it is recommended that you modify the Import settings for the file to 'Import As: Skip File' after saving to avoid errors on project load."
dialog_autowrap = true

[connection signal="editing_toggled" from="TabContainer/Actions/ScrollContainer/VBoxContainer/CsvPath" to="." method="_on_csv_path_editing_toggled"]
[connection signal="item_selected" from="TabContainer/Actions/ScrollContainer/VBoxContainer/Buttons/Mode" to="." method="_on_import_export_value_changed" unbinds=1]
[connection signal="pressed" from="TabContainer/Actions/ScrollContainer/VBoxContainer/Buttons/Validate" to="." method="_on_validate_button_pressed"]
[connection signal="pressed" from="TabContainer/Actions/ScrollContainer/VBoxContainer/Buttons/Execute" to="." method="_on_execute_button_pressed"]
[connection signal="pressed" from="TabContainer/Settings/ScrollContainer/VBoxContainer/Buttons/AddScript" to="." method="prompt_script_dialogue"]
[connection signal="canceled" from="CsvDialog" to="." method="_on_csv_dialog_canceled"]
[connection signal="file_selected" from="CsvDialog" to="." method="_on_csv_dialog_file_selected"]
[connection signal="canceled" from="ScriptDialog" to="." method="_on_script_dialog_canceled"]
[connection signal="file_selected" from="ScriptDialog" to="." method="_on_script_dialog_file_selected"]
[connection signal="canceled" from="WithinProjectConfirm" to="." method="_on_within_project_confirm_canceled"]
[connection signal="confirmed" from="WithinProjectConfirm" to="." method="_on_within_project_confirm_confirmed"]
